--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = subtest1
 	url = git@github.com:stefanjaw/subtest1.git
 	branch = odoo_v13
+[submodule "l10n_cr_pos"]
+	path = l10n_cr_pos
+	url = git@github.com:stefanjaw/l10n_cr_pos.git
+	branch = odoo_v13
