--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = l10n_cr_zones
 	url = git@github.com:stefanjaw/l10n_cr_zones.git
 	branch = odoo_v13
+[submodule "l10n_cr_einvoice"]
+	path = l10n_cr_einvoice
+	url = git@github.com:stefanjaw/l10n_cr_einvoice.git
+	branch = odoov13nz
